# knighthacks_25

./: .gitignore  README.md  agents.py  app.py  backend_image_api.py  config.py  database.py  frontenddashboard.html  requirements.txt
backend/: .env.example  CODE_AUDIT.md  FRONTEND_API_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  MOTOR_CONTROL_IMPLEMENTATION.md  PATH_PLANNING_IMPLEMENTATION.md  SENSOR_FUSION_IMPLEMENTATION.md  SERVER_WORKFLOW_UPDATED.md  adk_session_manager.py  config.py  main.py  state_manager.py
backend/agents/: navigation_agent.py
backend/arduino/: HARDWARE_SETUP_GUIDE.md
backend/loops/: detection_loop.py  fusion_loop.py  motor_control_loop.py  path_planning_loop.py  planning_loop.py
backend/models/: gemini_client.py  yolo_model.py
backend/pathfinding/: __init__.py  d_star_lite.py  occupancy_grid.py  priority_queue.py  utils.py
backend/tools/: motor_command_translator.py  navigation_tools.py  odometry.py
ios-app/: Podfile
ios-app/LidarCapture/: ContentView.swift  Info.plist  LidarCaptureApp.swift  LidarPoint.swift  (+6 more)
ios-app/LidarCapture.xcodeproj/: project.pbxproj
ios-app/LidarCapture.xcworkspace/: contents.xcworkspacedata
ros2app/: CMakeLists.txt  setup.py
ros2app/config/: rover_config.yaml
ros2app/launch/: rover_gazebo.launch.py
ros2app/rover_simulation/: dstar_lite.py  flask_bridge.py  obstacle_detector.py  rover_controller.py  vision_processor.py
ros2app/scripts/: run_flask_server.py
ros2app/urdf/: rover.urdf.xacro
ros2app/worlds/: rover_world.world
scripts/: init_db.py  quick_start.sh
templates/: index.html
(+2 files in other folders)
